<resources>
    <string name="app_name">iDISCIPLE App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Buttons -->
    <string name="button_login">Log-in</string>
    <string name="button_change_password_and_go">Change Password &amp; Go</string>
    <string name="button_email_reset_link">E-mail Reset Link</string>
    <string name="button_no">No</string>
    <string name="button_yes">Yes</string>
    <string name="button_change_avatar">Change Avatar</string>
    <string name="button_upload_avatar">Upload Avatar</string>
    <string name="button_link_forgot_password"><u>Forgot Password?</u></string>
    <string name="button_link_back_to_login"><u>Back to Log-In</u></string>
    <string name="button_link_dismiss"><u>Dismiss</u></string>


    <string name="bottom_nav_item_schedule">Schedule</string>
    <string name="bottom_nav_item_community">Community</string>
    <string name="bottom_nav_item_speakers">Speakers</string>
    <string name="bottom_nav_item_workshops">Workshops</string>
    <string name="bottom_nav_item_more">More</string>

    <string name="button_main_my_profile">My Profile</string>
    <string name="button_main_schedule">Schedule</string>
    <string name="button_main_speakers">Speakers</string>
    <string name="button_main_workshops">Workshops</string>
    <string name="button_main_community">Community</string>
    <string name="button_main_resources">Resources</string>
    <string name="button_main_directory">Directory</string>

    <string name="nav_menu_dashboard">Dashboard</string>
    <string name="nav_menu_profile">Profile</string>
    <string name="nav_menu_event">Event</string>
    <string name="nav_menu_schedule">Schedule</string>
    <string name="nav_menu_speakers">Speakers</string>
    <string name="nav_menu_workshops">Workshops</string>
    <string name="nav_menu_community">Community</string>
    <string name="nav_menu_resources">Resources</string>
    <string name="nav_menu_venue_directory">Venue Directory</string>
    <string name="nav_menu_sponsors">Sponsors</string>
    <string name="nav_menu_information">Information</string>
    <string name="nav_menu_terms_and_conditions">Terms and Conditions</string>
    <string name="nav_menu_social">Social</string>
    <string name="nav_menu_about">About</string>
    <string name="nav_menu_logout">Log-out</string>

    <string name="menu_workshop_option_view_desc">View Description</string>
    <string name="menu_workshop_option_view_outline">View Outline</string>

    <!-- Dialogs -->
    <string name="dialog_message_loading">Loading...</string>

    <string name="dialog_title_speaker_bio">SPEAKER\'S BIO</string>
    <string name="dialog_title_workshop_info">WORKSHOP INFO</string>
    <string name="dialog_title_profile_delegate">DELEGATE PROFILE</string>
    <string name="dialog_title_profile_own">YOUR PROFILE</string>

    <!-- Generic dialog error -->
    <string name="dialog_error_title_no_internet">No Internet</string>
    <string name="dialog_error_message_no_internet">This application requires an internet connection.</string>
    <string name="dialog_error_title_timeout">No connection to service</string>
    <string name="dialog_error_message_timeout">Kindly check your connection and restart the app.</string>
    <string name="dialog_error_title_generic">Oops!</string>
    <string name="dialog_error_message_generic">Something went wrong.\n Please try again.</string>

    <!-- Errors -->
    <string name="error_invalid_email_or_password">Invalid E-mail or Password.</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_required_field_password">Enter a valid password.</string>
    <string name="error_minimum_length_password">Minimum password length is 8 characters.</string>

    <!-- Hint -->
    <string name="hint_email">E-mail Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_re_enter_password">Re-enter New Password</string>
    <string name="hint_search_name">Search Name</string>


    <string name="login_title">Welcome!</string>
    <string name="login_instruction">Please enter your registered email and password.</string>

    <string name="forgot_password_title">Forgot your Password?</string>
    <string name="forgot_password_instruction">Enter your registered e-mail,\n we\'ll send you a link so you can set a new password.</string>
    <string name="forgot_password_confirmation">Reset link sent! Check your email.</string>

    <string name="first_password_title">First! Let\'s make your password personal.</string>
    <string name="title_hero">Hero</string>

    <string name="delagete_profile_dialog_label_assigned_to">Assigned to</string>
    <string name="delagete_profile_dialog_label_attending">Attending</string>

    <string name="own_profile_dialog_label_attending">THAT\'S YOU!</string>
    <string name="item_workshop_yours">YOUR WORKSHOP</string>
    <string name="item_event_is_happening">HAPPENING NOW</string>

    <string name="tab_community_groups">GROUPS</string>
    <string name="tab_community_delegates">DELEGATES</string>

    <!-- fonts -->
    <string name="font_montserrat_bold">Montserrat-Bold.ttf</string>
    <string name="font_montserrat_semibold">Montserrat-SemiBold.ttf</string>

</resources>
