<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/margin_big">

    <com.yondu.parkingbuddy.widgets.fonts.CustomComfortaaBoldTextView
        android:id="@+id/tvDialogHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_small"
        android:text="@string/dialog_error_title_no_internet"
        android:textColor="@color/colorDarkGray02"
        android:textSize="18sp" />

    <com.yondu.parkingbuddy.widgets.fonts.CustomComfortaaRegularTextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_normal"
        android:gravity="center"
        android:text="@string/dialog_error_message_no_internet"
        android:textColor="@color/colorLightGray01"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginStart="@dimen/margin_normal"
        android:gravity="center"
        android:orientation="horizontal">

        <com.yondu.parkingbuddy.widgets.fonts.CustomComfortaaBoldButton
            android:id="@+id/bDecline"
            style="@style/MainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/button_no" />

        <com.yondu.parkingbuddy.widgets.fonts.CustomComfortaaBoldButton
            android:id="@+id/bConfirm"
            style="@style/MainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/button_yes" />

    </LinearLayout>
</LinearLayout>