<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineContentLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineContentRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <!-- iDisciple Logo -->
    <android.support.constraint.Guideline
        android:id="@+id/guidelineLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineLogo"
        app:layout_constraintWidth_percent="0.24" />

    <!-- Content -->
    <android.support.constraint.Guideline
        android:id="@+id/guidelineContentLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/guidelineContentRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineContentLeft"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineContent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineContentLabels">

        <com.ph.idisciple.idiscipleapp.widgets.fonts.CustomMontserratSemiBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_password_title"
            android:textColor="@color/colorText"
            android:textSize="28sp" />

        <com.ph.idisciple.idiscipleapp.widgets.fonts.CustomMontserratSemiBoldTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:gravity="center"
            android:text="@string/forgot_password_instruction"
            android:textColor="@color/colorTextGray"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.constraint.Guideline
        android:id="@+id/guidelineContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineColorBar"
        app:layout_constraintEnd_toEndOf="@+id/guidelineContentRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineContentLeft"
        app:layout_constraintTop_toBottomOf="@+id/guidelineContent">

        <android.support.constraint.Guideline
            android:id="@+id/guidelineEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.03" />

        <LinearLayout
            android:id="@+id/llConfirmation"
            android:visibility="visible"
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="@+id/guidelineEmail"
            app:layout_constraintBottom_toTopOf="@+id/llEmail">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email" />

            <com.ph.idisciple.idiscipleapp.widgets.fonts.CustomMontserratSemiBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:background="@drawable/shape_transparent"
                android:text="@string/forgot_password_confirmation"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext"
            android:elevation="8dp"
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/margin_small"
            android:paddingEnd="@dimen/margin_small"
            android:paddingStart="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_small"
            android:layout_marginEnd="1dp"
            android:layout_marginStart="1dp"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@+id/llConfirmation"
            app:layout_constraintBottom_toTopOf="@+id/bEmailResetLink">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email" />

            <com.ph.idisciple.idiscipleapp.widgets.fonts.CustomMontserratSemiBoldEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:background="@drawable/shape_transparent"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <com.ph.idisciple.idiscipleapp.widgets.fonts.CustomMontserratBoldButton
            android:id="@+id/bEmailResetLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@color/colorIDiscipleBlue"
            android:text="@string/button_email_reset_link"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/llEmail"
            app:layout_constraintBottom_toTopOf="@+id/tvBackToLogin" />

        <com.ph.idisciple.idiscipleapp.widgets.fonts.CustomMontserratSemiBoldTextView
            android:id="@+id/tvBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/margin_small"
            android:text="@string/button_link_back_to_login"
            android:textColor="@color/colorIDiscipleBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/bEmailResetLink"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <!-- Color Bar -->
    <android.support.constraint.Guideline
        android:id="@+id/guidelineColorBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_colorbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineColorBar" />

</android.support.constraint.ConstraintLayout>